unpackaged/main/default/objects/conference360__Event_Settings__c/conference360__Event_Settings__c.object-meta.xml
<CustomObject>
    <label>Event Settings</label>
    <nameField>
        <label>Event Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>