unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Allow_Attendee_Edit_AttendeeLink_fields__c.field-meta.xml
<CustomField>
    <fullName>conference360__Allow_Attendee_Edit_AttendeeLink_fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox lets attendees edit their attendee registration data. They can edit their Attendee information on AttendeeLink or in a Community via the BT Listing Component.</description>
    <label>Allow Edits to Attendee fields</label>
    <type>Checkbox</type>
</CustomField>