unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Allow_Form_Responses_for_Attendee_Group__c.field-meta.xml
<CustomField>
    <fullName>conference360__Allow_Form_Responses_for_Attendee_Group__c</fullName>
    <inlineHelpText>When a registration includes multiple attendees, the user can expedite registration by copying the first attendee responses to form questions to all other attendees. Does not copy contact info.</inlineHelpText>
    <label>Allow Form Responses for Attendee Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>