unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Auto_update_Attendance_to_No_Show__c.field-meta.xml
<CustomField>
    <fullName>conference360__Auto_update_Attendance_to_No_Show__c</fullName>
    <description>For any registered attendees whose attendance status is not attended after the event, they will automatically be changed to &#39;No Show&#39;</description>
    <inlineHelpText>For any registered attendees whose attendance status is not attended after the event, they will automatically be changed to &#39;No Show&#39;</inlineHelpText>
    <label>Auto-update Attendance to No Show</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>