unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Background_Color__c.field-meta.xml
<CustomField>
    <fullName>conference360__Background_Color__c</fullName>
    <inlineHelpText>Define a specific color using a hex code. Do not include the pound symbol.</inlineHelpText>
    <label>Background Color (#)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>