unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Badge_Printing_Configuration__c.field-meta.xml
<CustomField>
    <fullName>conference360__Badge_Printing_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Badge Printing Configuration for this Event.</description>
    <inlineHelpText>The Badge Printing Configuration for this Event.</inlineHelpText>
    <label>Badge Printing Configuration</label>
    <referenceTo>conference360__Badge_Printing_Configuration__c</referenceTo>
    <relationshipLabel>Event Settings</relationshipLabel>
    <relationshipName>Event_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>