unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Campaign_Member_To_Invite_Status__c.field-meta.xml
<CustomField>
    <fullName>conference360__Campaign_Member_To_Invite_Status__c</fullName>
    <inlineHelpText>When the campaign member is pending an invitation for the event, their campaign member status updates to the defined value. If blank, the status is set to Sent.</inlineHelpText>
    <label>Campaign Member To Invite Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>