unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Card_Color_Theme__c.field-meta.xml
<CustomField>
    <fullName>conference360__Card_Color_Theme__c</fullName>
    <description>Sets the card color theme to light or dark in PayLink. This will be applied to the text color on the card.</description>
    <inlineHelpText>Sets the card color theme to light or dark in PayLink. This will be applied to the text color on the card.</inlineHelpText>
    <label>Card Color Theme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Light</fullName>
                <default>true</default>
                <label>Light</label>
            </value>
            <value>
                <fullName>Dark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>