unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Contact_Us_Label__c.field-meta.xml
<CustomField>
    <fullName>conference360__Contact_Us_Label__c</fullName>
    <inlineHelpText>Override the Contact Us label.</inlineHelpText>
    <label>Contact Us Label(Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>