unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Content__c.field-meta.xml
<CustomField>
    <fullName>conference360__Content__c</fullName>
    <inlineHelpText>Set the Content tab visibility. The pre-registration and post-registration options are for Event Portal customers.</inlineHelpText>
    <label>Content</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
                <default>true</default>
                <label>Always</label>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Post-Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>