unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Content_Label__c.field-meta.xml
<CustomField>
    <fullName>conference360__Content_Label__c</fullName>
    <inlineHelpText>Override the Content tab label.</inlineHelpText>
    <label>Content Label(Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>