unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Create_Opportunities_For_Donations__c.field-meta.xml
<CustomField>
    <fullName>conference360__Create_Opportunities_For_Donations__c</fullName>
    <inlineHelpText>For each Donation, create an Opportunity. Ex: 2 donations in a checkout, create 2 Opportunities if this setting is enabled.</inlineHelpText>
    <label>Create Opportunities For Donations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>