unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Create_Opportunity_From_Checkout__c.field-meta.xml
<CustomField>
    <fullName>conference360__Create_Opportunity_From_Checkout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, for each event registration, an Opportunity will be created.</description>
    <inlineHelpText>When checked, for each event registration, an Opportunity will be created.</inlineHelpText>
    <label>Create Opportunity From Checkout</label>
    <type>Checkbox</type>
</CustomField>