unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Currency_Display__c.field-meta.xml
<CustomField>
    <fullName>conference360__Currency_Display__c</fullName>
    <description>Use Symbol to display &quot;$199.00&quot; or ISO to display &quot;199.00 USD&quot;.</description>
    <inlineHelpText>Use Symbol to display &quot;$199.00&quot; or ISO to display &quot;199.00 USD&quot;.</inlineHelpText>
    <label>Currency Display</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Symbol</fullName>
            </value>
            <value>
                <fullName>ISO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>