unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Custom_Label3__c.field-meta.xml
<CustomField>
    <fullName>conference360__Custom_Label3__c</fullName>
    <label>Custom Label 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>