unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Custom_URL1__c.field-meta.xml
<CustomField>
    <fullName>conference360__Custom_URL1__c</fullName>
    <label>Custom URL 1</label>
    <type>Url</type>
</CustomField>