unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Date_Format__c.field-meta.xml
<CustomField>
    <fullName>conference360__Date_Format__c</fullName>
    <inlineHelpText>Set the date format for the event.</inlineHelpText>
    <label>Date Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MM/DD/YY</fullName>
            </value>
            <value>
                <fullName>MM/DD/YYYY</fullName>
            </value>
            <value>
                <fullName>DD/MM/YY</fullName>
            </value>
            <value>
                <fullName>DD/MM/YYYY</fullName>
            </value>
            <value>
                <fullName>YY/MM/DD</fullName>
            </value>
            <value>
                <fullName>YYYY/MM/DD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>