unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Decimal_Separator__c.field-meta.xml
<CustomField>
    <fullName>conference360__Decimal_Separator__c</fullName>
    <description>Choose . to display &quot;1.45&quot; or , to display &quot;1,45&quot;.</description>
    <inlineHelpText>Choose . to display &quot;1.45&quot; or , to display &quot;1,45&quot;.</inlineHelpText>
    <label>Decimal Separator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>.</fullName>
                <default>true</default>
                <label>.</label>
            </value>
            <value>
                <fullName>,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>