unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Default_Source_Language__c.field-meta.xml
<CustomField>
    <fullName>conference360__Default_Source_Language__c</fullName>
    <inlineHelpText>If left undefined, the source language will be English. If defined, the event will default to this language.Please make sure you create your event with defined Source Language.</inlineHelpText>
    <label>Source Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>conference360__Languages</valueSetName>
    </valueSet>
</CustomField>