unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Disable_Not_You__c.field-meta.xml
<CustomField>
    <fullName>conference360__Disable_Not_You__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When set, when an attendee receives an invite from AttendeeLink, they will not see the Not You button. A common use case for this is with invite-only events and with attendees forwarding invite emails to block other people from registering.</description>
    <inlineHelpText>When set, when an attendee receives an invite from AttendeeLink, they will not see the Not You button. A common use case for this is with invite-only events and with attendees forwarding invite emails to block other people from registering.</inlineHelpText>
    <label>Disable Not You</label>
    <type>Checkbox</type>
</CustomField>