unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Display_End_Time__c.field-meta.xml
<CustomField>
    <fullName>conference360__Display_End_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display End Time (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>