unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Enable_Captcha__c.field-meta.xml
<CustomField>
    <fullName>conference360__Enable_Captcha__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Captcha will be enabled.</description>
    <inlineHelpText>When checked, Captcha will be enabled.</inlineHelpText>
    <label>Enable Captcha</label>
    <type>Checkbox</type>
</CustomField>