unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Enabled_Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>conference360__Enabled_Payment_Methods__c</fullName>
    <inlineHelpText>If the event is paid, select how attendees can pay during checkout. PayLater will create an Order that you can Invoice later.</inlineHelpText>
    <label>Enabled Payment Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Pay Later</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
                <isActive>false</isActive>
                <label>ACH</label>
            </value>
            <value>
                <fullName>PayPal</fullName>
                <isActive>false</isActive>
                <label>PayPal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>