unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__FAQ_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>conference360__FAQ_Button_Label__c</fullName>
    <inlineHelpText>Override the FAQ tab label.</inlineHelpText>
    <label>FAQ Label(Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>