unpackaged/main/default/objects/conference360__Event_Settings__c/fields/conference360__Favicon_Url__c.field-meta.xml
<CustomField>
    <fullName>conference360__Favicon_Url__c</fullName>
    <inlineHelpText>The url to the Favicon to use for Events using this Event Settings record.</inlineHelpText>
    <label>Favicon Url</label>
    <type>Url</type>
</CustomField>